Bug Fix: Header pushed on mobile

--- a/less/uw.hero.less
+++ b/less/uw.hero.less
@@ -139,15 +139,12 @@
 		      background-size: cover;
 		    }
 
-		    #hero-bg #hero-container {
-				padding-left: 10px;
-		    	h1.uw-site-title {
-					padding-top: 40px;
-				    &:after{
-				    	background: none;
-				    }
-				}   
-			} 
+		    #hero-bg #hero-container h1.uw-site-title {
+				padding-top: 40px;
+			    &:after{
+			    	background: none;
+			    }
+			}
 		}
 
 		// Larger hero
